package com.gezer.grpcserver.service;

import org.junit.jupiter.api.Test;

import static org.junit.jupiter.api.Assertions.*;

class HospitalServiceImplTest {

    //Test if create patient works
    @Test
    void createPatient() {

    }
    //Test if modify patient works
    @Test
    void modifyPatient() {

    }
//Test if delete patient works
    @Test
    void deletePatient() {
    }
//Test if create hospital works
    @Test
    void createHospital() {
    }
//Test if modify hospital works
    @Test
    void modifyHospital() {
    }
//Test if delete hospital works
    @Test
    void deleteHospital() {
    }
//Test if register patient works
    @Test
    void registerPatient() {
    }
//Test if unregister patient works
    @Test
    void listPatients() {
    }
//Test if list hospitals works
    @Test
    void listHospitals() {
    }
}